<resources>
    <string name="app_name">NoteMe</string>
    <string name="task_name">Task Name: </string>
    <string name="created_date">Created Date: </string>
    <string name="deadline_date">Deadline: </string>
    <string name="no_note">No task yet! Please press the \"+\" icon below to add a task.</string>
    <string name="enter_your_input">Enter Your Input</string>
    <string name="save_url_text">Save URL</string>
    <string name="save">Save </string>
    <string name="hint_task">Task Name</string>
    <string name="hint_description">Write Description</string>
    <string name="save_text">Submit</string>
    <string name="empty_not_saved">Please fill up every field!</string>
    <string name="empty_name_not_saved">Task name can\'t be empty!</string>
    <string name="empty_description_not_saved">Description can\'t be empty!</string>
    <string name="deadline">Deadline:</string>
    <string name="status">Status:</string>
    <string name="url">URL</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="ok">Ok</string>
    <string name="description">Description:</string>
    <string name="task_saved_successfully">Task Saved \nSuccessfully</string>
    <string name="edit_note_fab">Edit Note Fab</string>
    <string name="add_note_fab">Add note fab</string>
</resources>