<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="obj"
            type="com.sudiptacseseu.noteme.model.Note" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorActivityBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_large"
            tools:context=".activity.AddNoteActivity">

            <LinearLayout
                android:id="@+id/taskNameLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/taskDescriptionLayoutId">

                <EditText
                    android:id="@+id/todoEditTextId"
                    android:hint="@string/hint_task"
                    android:text="@={obj.noteName}"
                    android:inputType="textAutoComplete"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDescriptionLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taskNameLayoutId"
                app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal40">

                <EditText
                    android:id="@+id/todoDescriptionEditTextId"
                    android:hint="@string/hint_description"
                    android:text="@={obj.noteDescription}"
                    android:inputType="textAutoComplete"
                    android:textSize="@dimen/text_size_medium"
                    android:maxLines="4"
                    android:minHeight="150dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/deadlineTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deadline"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal40"
                app:layout_constraintBottom_toBottomOf="@id/deadlineDateTextViewId"/>

            <TextView
                android:id="@+id/deadlineDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="1"
                android:text="@={obj.noteDeadline}"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/dateImageButtonId"
                app:layout_constraintStart_toEndOf="@+id/deadlineTextViewId"
                app:layout_constraintTop_toTopOf="@id/deadlineTextViewId" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/dateImageButtonId"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ic_calendar"
                app:layout_constraintStart_toEndOf="@+id/deadlineDateTextViewId"
                app:layout_constraintTop_toTopOf="@id/deadlineTextViewId" />


            <LinearLayout
                android:id="@+id/statusLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadlineTextViewId">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_spinner_background"
                    android:paddingStart="8dp"
                    android:gravity="center">

                    <Spinner
                        android:id="@+id/statusSpinnerId"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:backgroundTint="@android:color/transparent"
                        android:spinnerMode="dropdown"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayoutId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/phoneLayoutId"
                app:layout_constraintTop_toBottomOf="@id/statusLayoutId">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/emailImageButtonId"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@android:color/transparent"
                    android:foreground="@drawable/ic_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLayoutId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/emailLayoutId"
                app:layout_constraintTop_toTopOf="@id/emailLayoutId"
                app:layout_constraintEnd_toStartOf="@id/urlLayoutId">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/phoneImageButtonId"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@android:color/transparent"
                    android:foreground="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/urlLayoutId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/phoneLayoutId"
                app:layout_constraintTop_toTopOf="@id/emailLayoutId"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/urlImageButtonId"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@android:color/transparent"
                    android:foreground="@drawable/ic_url" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveNoteButtonId"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/save_text"
                android:textSize="@dimen/text_size_medium"
                android:textAllCaps="false"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLayoutId"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>