<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="obj"
            type="com.sudiptacseseu.noteme.model.Note" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding_small"
        tools:context=".activity.AddNoteActivity"
        android:background="@color/colorActivityBackground">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteButtonId"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_delete"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/createdLayoutId"/>


        <LinearLayout
            android:id="@+id/createdLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/deleteButtonId"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_date"
                android:layout_marginEnd="6dp"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createdDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={obj.noteCreated}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statusLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/deleteButtonId"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/statusTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={obj.noteStatus}"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/titleTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_weight="1"
            android:text="@={obj.noteName}"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createdLayoutId"/>

        <LinearLayout
            android:id="@+id/descriptionLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleTextViewId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:paddingBottom="4dp"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={obj.noteDescription}"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deadlineLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:paddingTop="24dp"
            android:paddingStart="8dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionLayoutId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deadline"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deadlineDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@={obj.noteDeadline}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/phoneLayoutId"
            app:layout_constraintTop_toBottomOf="@id/deadlineLayoutId">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/emailImageButtonId"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:gravity="center"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/emailLayoutId"
            app:layout_constraintTop_toTopOf="@id/emailLayoutId"
            app:layout_constraintEnd_toStartOf="@id/urlLayoutId">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/phoneImageButtonId"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ic_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:gravity="center"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/urlLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/phoneLayoutId"
            app:layout_constraintTop_toTopOf="@id/emailLayoutId"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/urlImageButtonId"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ic_url" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:gravity="center"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin_right"
            android:layout_marginBottom="@dimen/fab_margin_bottom"
            app:srcCompat="@drawable/ic_edit"
            android:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="Edit Note Fab" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>