<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:elevation="0dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding_medium"
            android:background="#ebebeb">

            <TextView
                android:id="@+id/taskNameTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textSize="16sp"
                android:paddingEnd="4dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/noteNameTextViewId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toStartOf="@id/guidelineHorizontal35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/createdDateTextViewId"/>

            <TextView
                android:id="@+id/createdDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_date"
                android:textSize="16sp"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteNameTextViewId"/>

            <TextView
                android:id="@+id/noteCreatedDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noteNameTextViewId"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:paddingTop="2dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/guidelineHorizontal35"
                app:layout_constraintTop_toBottomOf="@id/noteNameTextViewId"/>

            <TextView
                android:id="@+id/deadlineDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline_date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="6dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createdDateTextViewId"/>

            <TextView
                android:id="@+id/noteDeadlineDateTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noteNameTextViewId"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:paddingTop="6dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/guidelineHorizontal35"
                app:layout_constraintTop_toBottomOf="@id/createdDateTextViewId"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/noteCreatedDateTextViewId"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteDeadlineDateTextViewId">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editButtonId"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_edit" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteButtonId"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_delete" />

            </TableRow>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>